# ServerBrowserApplicationWX

./: CMakeLists.txt  ServerBrowserApplicationWX.aps  ServerBrowserApplicationWX.manifest  ServerBrowserApplicationWX.rc  resource.h  xmake.lua
include/: Browser.hpp  MyApp.hpp  MyFrame.hpp  ServerBrowserApplication.hpp  ServerHost.hpp  ServerInfo.hpp
include/dialogs/: AboutDialog.hpp  AddServerDialog.hpp  SettingsDialog.hpp
src/: Browser.cpp  MyApp.cpp  MyFrame.cpp  ServerBrowserApplication.cpp  ServerInfo.cpp  main.cpp  pch.hpp
src/dialogs/: AboutDialog.cpp  AddServerDialog.cpp  SettingsDialog.cpp
